--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -90,11 +90,11 @@
 									<li><i class="icon-play"></i> If your blockchain was crashed and you need get it back to normal fast</li>
 								</ul>
 								<h2>Step 1: Download flashcoin_blockchain_snapshot file:</h2>
-								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
-								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz</a>)<br>
-                          		(SHA256: d0ce0611bcb755157fab9267c26783a145dc96ec14eecb8b2a98d85470fa6eb2)<br>
-                          		(SHA512: b8daa5772ecc254878f89e17a2073f3ba09e4b884871dd8d5742e177133c4b9316e0495d8c38cf7be6255b5afb12209a012a1c0a97367492a1d3e12a6647dbc9)</p>
-								<p>The blockchain file has size 913Mb.</p>
+								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.02Apr2019.tar.gz" class="button button-3d bottommargin-sm">Download</a>
+								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.02Apr2019.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.02Apr2019.tar.gz</a>)<br>
+                          		(SHA256: b6ec021a900d54379006120cf1bea366e491dc08a1bf41f486cb91d631f4f67e)<br>
+                          		(SHA512: 143295dae755988ada6b819ddfd566514fc84cf480317c38a7ad9782bc861ca4080d3a4f731041a5e7c701fa84e820045fc838b4b78baf0db9e52ac0de197e64)</p>
+								<p>The blockchain file has size 1.1GB.</p>
 
 								<h2>Step 2: Unzip the flashcoin_blockchain_snapshot_*.tar.gz contain:</h2>
 								<p>The file contain:<br>
