--- a/our-team.html
+++ b/our-team.html
@@ -296,19 +296,19 @@
 									</div>
 								</div>
 								<!-- David Tz end -->
-								<!--
+
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/dr-tai.jpg" alt="Dr Tai">
+											<img src="images/team/no-photo.jpg" alt="Larry B">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Dr Tai</h4><span>Blockchain R&amp;D</span></div>
+												<h4>Larry B</h4><span>Blockchain Developer</span></div>
 										</div>
 									</div>
 								</div>
-								-->
+								<!-- Larry -->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
