--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">Q1 2019</div>
-                            <div class="home-roadmap__title">Credit card purchase in FWW & Mobile apps, Trezor wallet support in FWW, Launch of Decentralized FLASH Testnet v1</div>
+                            <div class="home-roadmap__title">Import FLASH using private keys in FWW and Mobile app, Purchase ranks in HTM</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -436,7 +436,15 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">Q2 2019</div>
-                            <div class="home-roadmap__title">Launch of trustless P2P trading in P2P marketplace, Launch of ERC20 tokens in mobile apps, Launch of Decentralized FLASH Mainnet v1</div>
+                            <div class="home-roadmap__title">HD wallet support in FWW & Mobile apps, Export of private keys in FWW & Mobile Apps, Credit card purchase support in FWW & Mobile apps</div>
+                        </div>
+                        <div class="home-roadmap__item swiper-slide">
+                            <div class="home-roadmap__points">
+                                <div class="home-roadmap__point"></div>
+                                <div class="home-roadmap__point _active"></div>
+                            </div>
+                            <div class="home-roadmap__date">Q3 2019</div>
+                            <div class="home-roadmap__title">Launch of Decentralized FLASH Mainnet v1, Launch of trustless P2P trading in P2P marketplace, In wallet Exchange in FWW and mobile app</div>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
