--- a/index.html
+++ b/index.html
@@ -495,6 +495,10 @@
 												<div class="col-md-6"><span>Launch of HTM</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
+											<h5 class="row collapse q3-last-margin 2018">
+												<div class="col-md-6"><span>Launch of trust-based P2P trading</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
 											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target=".2018">More+</a></h5>
 										</div>
 									</div>
@@ -507,10 +511,6 @@
 												<div class="col-md-6"><span>Import FLASH using private keys in FWW and Mobile app</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
-											<h5 class="row q1-last-margin">
-												<div class="col-md-6"><span>Launch of trust-based P2P trading</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
-											</h5>		
 											<h5 class="row q1-last-margin">
 												<div class="col-md-6"><span>Purchase ranks in HTM</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
