--- a/index.html
+++ b/index.html
@@ -694,6 +694,7 @@
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security).</p>
 									<ul class="grid-4 clients-grid nobottommargin clearfix">
+										<li><a href="https://www.bitker.com/#/bbTrades/flash_btc" target="_blank"><img src="images/exchanges/bitker.png" alt="Flash Bitker exchange"></a></li>
 										<li><a href="https://www.cryptopia.co.nz/Exchange/?market=FLASH_BTC" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
 										<li><a href="https://einstein.exchange/trade?mode=advanced&instrument=FLASHUSD" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
 										<li><a href="https://www.coinhub.io/en/exchange" target="_blank"><img src="images/exchanges/coinhub.png" alt="Flash coinhub exchange"></a></li>
