--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">Q1 2019</div>
-                            <div class="home-roadmap__title">Import FLASH using private keys in FWW and Mobile app, Purchase ranks in HTM</div>
+                            <div class="home-roadmap__title">Import FLASH using private keys in FWW and Mobile Apps, Purchase ranks in HTM</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -436,7 +436,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">Q2 2019</div>
-                            <div class="home-roadmap__title">HD wallet support in FWW & Mobile apps, Export of private keys in FWW & Mobile Apps, Credit card purchase support in FWW & Mobile apps</div>
+                            <div class="home-roadmap__title">HD wallet support in FWW & Mobile apps, Export of private keys in FWW & Mobile Apps, Launch of ERC20 tokens in Mobile Apps</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -444,7 +444,15 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">Q3 2019</div>
-                            <div class="home-roadmap__title">Launch of Decentralized FLASH Mainnet v1, Launch of trustless P2P trading in P2P marketplace, In wallet Exchange in FWW and mobile app</div>
+                            <div class="home-roadmap__title">Launch of FLASH Web Wallet 2.0, Launch of trustless P2P trading in P2P marketplace, Launch of Decentralized FLASH Mainnet v1</div>
+                        </div>
+                        <div class="home-roadmap__item swiper-slide">
+                            <div class="home-roadmap__points">
+                                <div class="home-roadmap__point"></div>
+                                <div class="home-roadmap__point _active"></div>
+                            </div>
+                            <div class="home-roadmap__date">Q4 2019</div>
+                            <div class="home-roadmap__title">Launch of Decentralized FLASH Testnet v2, Credit card purchase support in FWW & Mobile apps, Addition of more cryptocurrencies to FWW and Mobile Apps</div>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
@@ -524,49 +532,24 @@
 										<div class="sub-section">
 											<h5 class="row q1-last-margin clearfix">
 												<div class="col-md-6"><span>HD wallet support in FWW & Mobile apps</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">90% Completed</span><span class="fill-in" data-width="90"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
 											<h5 class="row q1-last-margin clearfix">
 												<div class="col-md-6"><span>Export of private keys in FWW & Mobile Apps</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">40% Completed</span><span class="fill-in" data-width="40"></span></div>
-											</h5>
-											<h5 class="row q1-last-margin">
-												<div class="col-md-6"><span>Credit card purchase support in FWW & Mobile apps</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">50% Completed</span><span class="fill-in" data-width="50"></span></div>
-											</h5>
-											<h5 class="row q1-last-margin collapse Quarter2">
-												<div class="col-md-6"><span>Trezor wallet support in FWW</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">90% Completed</span><span class="fill-in" data-width="90"></span></div>
-											</h5>
-											<h5 class="row q1-last-margin clearfix collapse Quarter2">
-												<div class="col-md-6"><span>Launch of FLASH Web Wallet 2.0</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">40% Completed</span><span class="fill-in" data-width="40"></span></div>
-											</h5>
-											<h5 class="row q1-last-margin clearfix collapse Quarter2">
-												<div class="col-md-6"><span>Launch of FLASH Desktop Wallet for Mac, Windows, and Ubuntu</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
 											<h5 class="row q2-last-margin">
 												<div class="col-md-6"><span>Launch of ERC20 tokens in mobile apps</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
-											<h5 class="row q2-last-margin collapse Quarter2">
+											<h5 class="row q2-last-margin">
 												<div class="col-md-6"><span>Open Source Map support in HTM</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
-											<h5 class="row q2-last-margin collapse Quarter2">
-												<div class="col-md-6"><span>Addition of more cryptocurrencies to FWW and mobile apps - BCH, BSV, BTG, TUSD, USDT etc.</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											<h5 class="row q2-last-margin">
+												<div class="col-md-6"><span>Added in FWW and mobile apps - TUSD, USDT, HST</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
-											<h5 class="row q2-last-margin collapse Quarter2">
-												<div class="col-md-6"><span>Release of FLASH Whitepaper v2</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
-											</h5>
-											<h5 class="row q1-last-margin">
-												<div class="col-md-6"><span>Launch of Decentralized FLASH Testnet v1</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">60% Completed</span><span class="fill-in" data-width="60"></span></div>
-											</h5>
-											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target=".Quarter2">More+</a></h5>
 										</div>
 									</div>
 								</div>
@@ -575,25 +558,42 @@
 										<h2>Quarter 3 2019</h2>
 										<div class="sub-section">
 											<h5 class="row q3-last-margin">
-												<div class="col-md-6"><span>Launch of Decentralized FLASH Mainnet v1</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6"><span>Launch of FLASH Web Wallet 2.0</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
+											</h5>
+											<h5 class="row q3-last-margin">
+												<div class="col-md-6"><span>Launch of FLASH Desktop Wallet for Mac, Windows, and Ubuntu</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">40% Completed</span><span class="fill-in" data-width="40"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of trustless P2P trading in P2P marketplace</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
 											</h5>
-											<h5 class="row q3-last-margin">
+											<h5 class="row q3-last-margin collapse Quarter3">
 												<div class="col-md-6"><span>In wallet Exchange in FWW and mobile app</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
 											</h5>
-											<h5 class="row q3-last-margin">
+											<h5 class="row q3-last-margin collapse Quarter3">
 												<div class="col-md-6"><span>Launch of HTM on FWW & FLASH Desktop app</span></div>
 												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
 											</h5>
-											<h5 class="row q3-last-margin">
+											<h5 class="row q3-last-margin collapse Quarter3">
 												<div class="col-md-6"><span>Launch of wagering on FLASH Desktop app</span></div>
 												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
 											</h5>
+											<h5 class="row q3-last-margin collapse Quarter3">
+												<div class="col-md-6"><span>Release of FLASH Whitepaper v2</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row q3-last-margin">
+												<div class="col-md-6"><span>Launch of Decentralized FLASH Testnet v1</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
+											</h5>
+											<h5 class="row q3-last-margin">
+												<div class="col-md-6"><span>Launch of Decentralized FLASH Mainnet v1</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target=".Quarter3">More+</a></h5>
 										</div>
 									</div>
 								</div>
@@ -631,6 +631,15 @@
 										</div>
 										<div class="sub-section">
 											<h3 class="starting-soon color-gold">New Features of FWW and Apps</h3>
+											<h5 class="row starting-soon">
+												<div class="col-md-12"><span>Credit card purchase support in FWW & Mobile apps</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-12"><span>Trezor wallet support in FWW</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-12"><span>Addition of more cryptocurrencies to FWW and mobile apps - BCH, BSV, BTG, TUSD, USDT etc.</span></div>
+											</h5>
 											<h5 class="row starting-soon">
 												<div class="col-md-12"><span>Addition of Trezor wallet support for mobile apps</span></div>
 											</h5>
