--- a/our-team.html
+++ b/our-team.html
@@ -248,11 +248,11 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Chintan">
+											<img src="images/team/no-photo.jpg" alt="Chintoo">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Chintan</h4><span>Mobile Developer</span></div>
+												<h4>Chintoo</h4><span>Mobile Developer</span></div>
 										</div>
 									</div>
 								</div>
