--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 												<div class="col-md-12"><span>Trezor wallet support in FWW</span></div>
 											</h5>
 											<h5 class="row starting-soon">
-												<div class="col-md-12"><span>Addition of more cryptocurrencies to FWW and mobile apps - BCH, BSV, BTG, TUSD, USDT etc.</span></div>
+												<div class="col-md-12"><span>Addition of more cryptocurrencies to FWW and mobile apps - BCH, BSV, BTG etc.</span></div>
 											</h5>
 											<h5 class="row starting-soon">
 												<div class="col-md-12"><span>Addition of Trezor wallet support for mobile apps</span></div>
