--- a/index.html
+++ b/index.html
@@ -539,6 +539,10 @@
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
 											<h5 class="row q2-last-margin">
+												<div class="col-md-6"><span>Import of private keys in FWW & Mobile Apps</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+											<h5 class="row q2-last-margin">
 												<div class="col-md-6"><span>Launch of ERC20 tokens in mobile apps</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
@@ -587,7 +591,7 @@
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of Decentralized FLASH Testnet v1</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of Decentralized FLASH Mainnet v1</span></div>
