Updated Playstore link

--- a/faq.html
+++ b/faq.html
@@ -263,7 +263,7 @@
 									<div class="faqs-desc-bg">
 										<h4 class="">
 											<p>Yes, FLASH currently has an Android wallet which can be found in the PlayStore and an iOS wallet which can be found in the Apple iTunes store.</p>
-											<p class=""><b>Android wallet:</b> <a class="download-link" target="_blank" href="https://play.google.com/store/apps/details?id=com.flash.wallet.android">https://play.google.com/store/apps/details?id=com.flash.wallet.android</a></p>
+											<p class=""><b>Android wallet:</b> <a class="download-link" target="_blank" href="https://play.google.com/store/apps/details?id=com.coinapps.flash.wallet.android">https://play.google.com/store/apps/details?id=com.coinapps.flash.wallet.android</a></p>
 											<p class=""><b>Apple iOS wallet:</b> <a class="download-link" target="_blank" href="https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514">https://itunes.apple.com/in/app/coinodes-flash-wallet/id1397010514</a></p>
 										</h4>
 									</div>
