--- a/header.html
+++ b/header.html
@@ -87,7 +87,7 @@
 											</a>
 										</li>
 										<li>
-											<a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank">
+											<a href="https://play.google.com/store/apps/details?id=com.coinapps.flash.wallet.android" target="_blank">
 												<div>ANDROID WALLET</div>
 											</a>
 										</li>
