--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
 									<div class="fancy-title title-border">
 										<h2>Flash <span>Android</span> Wallet</h2>
 									</div>
-									<a href="https://play.google.com/store/apps/details?id=com.flash.wallet.android" target="_blank" class="button topmargin-sm play-store-btn"><img src="images/icons/playstor1.png?ver=1.1"></a>
+									<a href="https://play.google.com/store/apps/details?id=com.coinapps.flash.wallet.android" target="_blank" class="button topmargin-sm play-store-btn"><img src="images/icons/playstor1.png?ver=1.1"></a>
 								</div>
 								<div class="col-lg-8">
 									<div class="max-height col-lg-12">
