- team updates - exchanges update

--- a/our-team.html
+++ b/our-team.html
@@ -139,7 +139,7 @@
 								<div class="col-md-4 bottommargin team-advisors">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/codeislaw.jpg?1" alt="Codeislaw">
+											<img src="images/team/no-photo.jpg?1" alt="Codeislaw">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -274,7 +274,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/danish-tariq.jpg" alt="Danish">
+											<img src="images/team/no-photo.jpg" alt="Danish">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -341,11 +341,11 @@
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
 									<div class="team community-leader">
 										<div class="team-image">
-											<img src="images/team/stack.jpg" alt="stack">
+											<img src="images/team/no-photo.jpg" alt="stack">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Sean Stack</h4><span>Volunteer Community Leader | <a href="https://www.linkedin.com/in/sean-stack-mba-cirp-40692b76/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
+												<h4>Sean Stack</h4><span>Volunteer Community Leader</span></div>
 										</div>
 									</div>
 								</div>
