--- a/index.html
+++ b/index.html
@@ -559,39 +559,31 @@
 								</div>
 								<div class="col-md-6 bottommargin-sm">
 									<div class="inner-section">
-										<h2>Quarter 3 2019</h2>
+										<h2>Quarter 3 &amp; Q4 2019</h2>
 										<div class="sub-section">
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of FLASH Web Wallet 2.0</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">95% Completed</span><span class="fill-in" data-width="95"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of FLASH Desktop Wallet for Mac, Windows, and Ubuntu</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">40% Completed</span><span class="fill-in" data-width="40"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">60% Completed</span><span class="fill-in" data-width="60"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of trustless P2P trading in P2P marketplace</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">40% Completed</span><span class="fill-in" data-width="40"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin collapse Quarter3">
 												<div class="col-md-6"><span>In wallet Exchange in FWW and mobile app</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
-											</h5>
-											<h5 class="row q3-last-margin collapse Quarter3">
-												<div class="col-md-6"><span>Launch of HTM on FWW & FLASH Desktop app</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
-											</h5>
-											<h5 class="row q3-last-margin collapse Quarter3">
-												<div class="col-md-6"><span>Launch of wagering on FLASH Desktop app</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">25% Completed</span><span class="fill-in" data-width="25"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin collapse Quarter3">
 												<div class="col-md-6"><span>Release of FLASH Whitepaper v2</span></div>
-												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">30% Completed</span><span class="fill-in" data-width="30"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of Decentralized FLASH Testnet v1</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">80% Completed</span><span class="fill-in" data-width="80"></span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-6"><span>Launch of Decentralized FLASH Mainnet v1</span></div>
@@ -605,9 +597,15 @@
 							<div class="row">
 								<div class="col-md-12 bottommargin-sm">
 									<div class="inner-section">
-										<h2>Further ahead in 2019 & Beyond</h2>
+										<h2>Further ahead in 2020 &amp; Beyond</h2>
 										<div class="sub-section">
 											<h3 class="starting-soon color-gold">New Features of FLASH Blockchain</h3>
+											<h5 class="row starting-soon">
+												<div class="col-md-12"><span>Launch of HTM on FWW & FLASH Desktop app</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-12"><span>Launch of wagering on FLASH Desktop app</span></div>
+											</h5>
 											<h5 class="row starting-soon">
 												<div class="col-md-12"><span>Launch of Decentralized FLASH Testnet v2</span></div>
 											</h5>
