--- a/faq.html
+++ b/faq.html
@@ -222,7 +222,7 @@
 										<h3>Who Are The Developers Behind FLASH?</h3>
 									</div>
 									<div class="faqs-desc-bg">
-										<h4 class="">The FLASH development team is lead by Deepak Kumar. All other developers are listed on the FLASH website <a target="_blank" href="https://www.flashcoin.io/our-team.html">team page</a>.</h4>
+										<h4 class="">The FLASH development team is lead by Capt. Nomad. All other developers are listed on the FLASH website <a target="_blank" href="https://www.flashcoin.io/our-team.html">team page</a>.</h4>
 									</div>
 								</div>
 								<div class="faqs-section">
@@ -231,8 +231,7 @@
 									</div>
 									<div class="faqs-desc-bg">
 										<h4 class="">
-											<p>FLASH can be purchased on any of the respective exchanges it is listed on. Currently FLASH is listed on the following exchanges:</p>
-											<p>Einstein, Cryptopia, Cryptobridge, CREX24, UPCoin, Indacoin, BOAexchange, Cryptowolf, Coinexchange.io, Blockbid.</p>
+											<p>FLASH can be purchased on any of the respective exchanges it is listed on. All exchanges are listed <a href="http://localhost:8000/index.html#exchanges" target="_blank">here.</a></p>
 										</h4>
 									</div>
 								</div>
