--- a/our-team.html
+++ b/our-team.html
@@ -139,7 +139,7 @@
 								<div class="col-md-4 bottommargin team-advisors">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg?1" alt="Codeislaw">
+											<img src="images/team/no-photo.png?1" alt="Codeislaw">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -183,7 +183,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Capt. Nomad">
+											<img src="images/team/no-photo.png" alt="Capt. Nomad">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -196,7 +196,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="DB">
+											<img src="images/team/no-photo.png" alt="DB">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -209,7 +209,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="ImMike">
+											<img src="images/team/no-photo.png" alt="ImMike">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -222,7 +222,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Godlike">
+											<img src="images/team/no-photo.png" alt="Godlike">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -235,7 +235,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="AK">
+											<img src="images/team/no-photo.png" alt="AK">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -248,7 +248,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Chintoo">
+											<img src="images/team/no-photo.png" alt="Chintoo">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -261,7 +261,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Master Div">
+											<img src="images/team/no-photo.png" alt="Master Div">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -274,7 +274,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Danish">
+											<img src="images/team/no-photo.png" alt="Danish">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -287,7 +287,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="D.Thomas">
+											<img src="images/team/no-photo.png" alt="D.Thomas">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -300,7 +300,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Larry B">
+											<img src="images/team/no-photo.png" alt="Larry B">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -313,7 +313,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Max">
+											<img src="images/team/no-photo.png" alt="Max">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -341,11 +341,11 @@
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
 									<div class="team community-leader">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="stack">
+											<img src="images/team/no-photo.png" alt="stack">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Sean Stack</h4><span>Volunteer Community Leader</span></div>
+												<h4>Stack</h4><span>Volunteer Community Leader</span></div>
 										</div>
 									</div>
 								</div>
@@ -354,7 +354,7 @@
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
 									<div class="team community-leader">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Samsungthedefender">
+											<img src="images/team/no-photo.png" alt="Samsungthedefender">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -367,7 +367,7 @@
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
 									<div class="team community-leader">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Enki">
+											<img src="images/team/no-photo.png" alt="Enki">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
@@ -396,7 +396,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin community-volunteers">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Mr. Odds">
+											<img src="images/team/no-photo.png" alt="Mr. Odds">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title volunteers-title">
@@ -411,7 +411,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Samsungthedefender">
+											<img src="images/team/no-photo.png" alt="Samsungthedefender">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title volunteers-title">
