--- a/footer.html
+++ b/footer.html
@@ -16,10 +16,6 @@
 									<img src="images/footer-logo.png" alt="" class="footer-logo">
 
 									<div style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
-										<address>
-										<strong>Headquarters:</strong><br>
-										Liechtenstein<br>
-									</address>
 										<abbr title="Email Address"><strong>Email:</strong></abbr> <a href="mailto:info@flashcoin.io" target="_top">info@flashcoin.io</a>
 									</div>
 
@@ -110,10 +106,8 @@
 					<div class="container clearfix">
 
 						<div class="col_half">
-							<!-- <div>Copyrights &copy; 2018 All Rights Reserved by Flashcoin.io
-						Flashcoin.io is provided by the Flashcoin Foundation,Liechtenstein.Supported by the FLASH community.</div> -->
-							<!--<div class="copyright-links"><a href="#">Terms of Use</a> / <a href="#">Privacy Policy</a></div>-->
-							FLASH is supported by the Third Millennium Foundation for Economics and Culture, Liechtenstein, and the FLASH community worldwide.
+							<br><br>
+							Supported by the FLASH community.
 						</div>
 
 						<div class="col_half col_last tright">
