--- a/index.html
+++ b/index.html
@@ -445,13 +445,13 @@
 												<div class="col-md-12"><span>Launch of FLASH Decentralized Whitepaper v2</span></div>
 											</h5>
 											<h5 class="row starting-soon">
-												<div class="col-md-12"><span>Credit Card Purchase Support in FWW and Mobile Apps</span></div>
+												<div class="col-md-12"><span>Credit Card Purchase Support in FWW and Mobile Apps (Tentative)</span></div>
 											</h5>
 											<h5 class="row q3-last-margin collapse Quarter1">
 												<div class="col-md-12"><span>In wallet Exchange in FWW and mobile app</span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
-												<div class="col-md-12"><span>Launch of FLASH Decentralized Testnet v1 - Phase 1</span></div>
+												<div class="col-md-12"><span>Launch of FLASH Decentralized Testnet v1 - Phase 1 (Tentative)</span></div>
 											</h5>
 											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target=".Quarter1">More+</a></h5>
 										</div>
@@ -465,7 +465,7 @@
 												<div class="col-md-12"><span>Launch of FLASH Decentralized Testnet v1 - Phase 2</span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
-												<div class="col-md-12"><span>Launch of FLASH Decentralized Mainnet v1</span></div>
+												<div class="col-md-12"><span>Launch of FLASH Decentralized Mainnet v1 (Tentative)</span></div>
 											</h5>
 											<h5 class="row q3-last-margin">
 												<div class="col-md-12"><span>Launch of FLASH GenNxt Apps</span></div>
@@ -578,14 +578,13 @@
 									<p>FLASH supports any legal cryptocurrency exchange, including decentralized exchanges. Our community occasionally contributes funds to get FLASH listed. FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security).</p>
-									<ul class="grid-4 clients-grid nobottommargin clearfix">
+									<ul class="grid-3 clients-grid nobottommargin clearfix">
 										<!--<li><a href="https://www.bitker.com/#/bbTrades/flash_btc" target="_blank"><img src="images/exchanges/bitker.png" alt="Flash Bitker exchange"></a></li>-->
 										<li><a href="https://bitfxt.com/home/trading/FLASH_BTC" target="_blank"><img src="images/exchanges/bitfxt.png" alt="Flash Bitfix exchange"></a></li>
 										<li><a href="https://crex24.com/exchange/FLASH-BTC" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
 										<!--<li><a href="https://www.cryptopia.co.nz/Exchange/?market=FLASH_BTC" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>-->
 										<!--<li><a href="https://einstein.exchange/trade?mode=advanced&instrument=FLASHUSD" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>-->
 										<li><a href="https://www.coinhub.io/en/exchange" target="_blank"><img src="images/exchanges/coinhub.png" alt="Flash coinhub exchange"></a></li>
-										<li><a href="https://www.naijacrypto.com/exchange/FLASH_BTC" target="_blank"><img src="images/exchanges/naijacrypto.png" alt="Flash naijacrypto exchange"></a></li >
 										<li><a href="https://www.halodex.io/trade/FLASH/BTC" target="_blank"><img src="images/exchanges/halo-dex.png" alt="Flash exchange Halo Dex"></a></li>
 										<li><a href="https://cryptowolf.eu/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Flash exchange"></a></li>
 										<!--<li><a href="https://upcoin.com/trade/FLASH-BTC" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>-->
