Danish name changed

--- a/our-team.html
+++ b/our-team.html
@@ -191,7 +191,7 @@
 										</div>
 									</div>
 								</div>
-								<!-- Deepak Kumar end -->
+								<!-- Capt. Nomad end -->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -217,7 +217,7 @@
 										</div>
 									</div>
 								</div>
-								<!--Maulik Vora end-->
+								<!--ImMike end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -230,7 +230,7 @@
 										</div>
 									</div>
 								</div>
-								<!--Ashwini end-->
+								<!--Godlike end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -243,7 +243,7 @@
 										</div>
 									</div>
 								</div>
-								<!-- Akash Kumar end -->
+								<!-- AK end -->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -256,7 +256,7 @@
 										</div>
 									</div>
 								</div>
-								<!--Chintan P end-->
+								<!--Chintoo end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -269,20 +269,20 @@
 										</div>
 									</div>
 								</div>
-								<!--Divyesh K end-->
+								<!--Master Div end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.png" alt="Danish">
+											<img src="images/team/no-photo.png" alt="Dani">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Danish Tariq</h4><span>Cyber Security Auditor</a></span></div>
+												<h4>Dani</h4><span>Cyber Security Auditor</a></span></div>
 										</div>
 									</div>
 								</div>
-								<!--Danish end-->
+								<!--Dani end-->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -295,7 +295,7 @@
 										</div>
 									</div>
 								</div>
-								<!-- David Tz end -->
+								<!-- D. Thomas end -->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
