--- a/header.html
+++ b/header.html
@@ -69,11 +69,6 @@
 												<div>MERCHANTS</div>
 											</a>
 										</li>
-										<li>
-											<a href="#" data-href="#feature-flash">
-												<div>UPCOMING FEATURES</div>
-											</a>
-										</li>
 									</ul>
 								</li>
 								<li>
@@ -119,12 +114,12 @@
 									</ul>
 								</li>
 								<li>
-									<a href="#whitepaper" data-hash="whitepaper">
+									<a href="#wallet" data-href="whitepaper">
 										<div>RESOURCES</div>
 									</a>
 									<ul>
 										<li>
-											<a href="#" data-href="#whitepaper">
+											<a href="#" data-href="#wallet">
 												<div>WHITEPAPER</div>
 											</a>
 										</li>
