home page fixes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 								<div class="top-social-btns whitepaper bottommargin-sm bottommargin-child">
 									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank" class="teligram-btn btn btn-primary"></a>
-									<a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank" class="reddit-btn btn btn-primary"></a>
+									<a href="https://www.reddit.com/r/FlashCoins/" target="_blank" class="reddit-btn btn btn-primary"></a>
 									<a href="https://discord.gg/2nFmMqA" target="_blank" class="discord-btn btn btn-primary"></a>
 								</div>
 							</div>
