--- a/index.html
+++ b/index.html
@@ -920,8 +920,8 @@
 											<h4 class="color-gold" id="TotalBlocks">573783</h4>
 											<h4>Market Price</h4>
 											<h4 class="color-gold" id="market_price">166 sat |~0.0136 usd|</h4>
-											<h4>Rank</h4>
-											<h4 class="color-gold" id="current_rate">394</h4>
+											<!-- <h4>Rank</h4>
+											<h4 class="color-gold" id="current_rate">394</h4> -->
 										</div>
 									</div>
 								</div>
